adding contents for lecture 01

--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -9,5 +9,20 @@ related_publications:
 giscus_comments: false
 ---
 
-To Be Posted
+[Course Syllabus]({{ www.mseryn.com }}/assets/docs/Syllabus-v1.pdf), last updated Sep 07 2023
 
+Please use Piazza for any course material discussions and questions! To join, please use [this link](https://piazza.com/iit/fall2023/cs351cug).
+
+To schedule a meeting with me, please use [calendy](https://calendly.com/melanie-e-cornelius).
+
+Our TA: Lang Liu
+
+E-mail: lliu94@hawk.iit.edu
+
+Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in China) and Friday, 6:45 am - 7:00 am (before class)
+
+Lectures:
+
+| Lecture | Date | Topic(s) | Slides | Recording |
+|-------|-------|--------|---------|---------|
+| 01 | 07 September 2023 | Syllabus, Course Overview | [Slides-01.pdf]({{ www.mseryn.com }}/assets/docs/Slides-01.pdf) | [Panopto](https://iit.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=951c8e41-946f-4099-bcba-b07501646b2a) |
