--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -27,3 +27,5 @@ Lectures:
 |-------|-------|--------|---------|---------|
 | 01 | 06 September 2023 | Syllabus, Course Overview | [Slides-01.pdf]({{ www.mseryn.com }}/assets/docs/Slides-01.pdf) | [Panopto](https://iit.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=951c8e41-946f-4099-bcba-b07501646b2a) |
 | 02 | 08 September 2023 | C Primer part 1 | [Slides-02.pdf]({{ www.mseryn.com }}/assets/docs/Slides-02.pdf) | [Panopto](https://iit.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=75ff3a8d-7523-41af-9c10-b07700ebeee9)|
+| 03 | 13 September 2023 | C Primer part 2 | [Slides-03.pdf]({{ www.mseryn.com }}/assets/docs/Slides-03.pdf) | |
+| 04 | 15 September 2023 | C Primer part 3 | [Slides-04.pdf]({{ www.mseryn.com }}/assets/docs/Slides-04.pdf) | |
