--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -8,24 +8,43 @@ category: work
 related_publications:
 giscus_comments: false
 ---
+### Syllabus
 
 [Course Syllabus]({{ www.mseryn.com }}/assets/docs/Syllabus-v1.pdf), last updated Sep 07 2023
 
-Please use Piazza for any course material discussions and questions! To join, please use [this link](https://piazza.com/iit/fall2023/cs351cug).
+---
+### For questions --
+We are using Piazza for any course material discussions and questions! 
 
+To join, use [this link](https://piazza.com/iit/fall2023/cs351cug).
+
+For any questions involving personal information, please feel free to [email me](mailto:melanie.e.cornelius@gmail.com).
+
+---
+### Logistics
+This course is hosted online through BlackBoard Collaborate
+
+My office hours are on-demand only.
 To schedule a meeting with me, please use [calendy](https://calendly.com/melanie-e-cornelius).
 
-Our TA: Lang Liu
-
-E-mail: lliu94@hawk.iit.edu
+Our TA is **Lang Liu**, [email](mailto:lliu94@hawk.iit.edu)
 
 Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in China) and Friday, 6:45 am - 7:00 am (before class)
 
-Lectures:
+---
+### Lectures:
 
-| Lecture | Date | Topic(s) | Slides | Recording |
+| Lecture | Date | Topic(s) | Materials | 
 |-------|-------|--------|---------|---------|
-| 01 | 06 September 2023 | Syllabus, Course Overview | [Slides-01.pdf]({{ www.mseryn.com }}/assets/docs/Slides-01.pdf) | [Panopto](https://iit.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=951c8e41-946f-4099-bcba-b07501646b2a) |
-| 02 | 08 September 2023 | C Primer part 1 | [Slides-02.pdf]({{ www.mseryn.com }}/assets/docs/Slides-02.pdf) | [Panopto](https://iit.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=75ff3a8d-7523-41af-9c10-b07700ebeee9)|
-| 03 | 13 September 2023 | C Primer part 2 | [Slides-03.pdf]({{ www.mseryn.com }}/assets/docs/Slides-03.pdf) | |
-| 04 | 15 September 2023 | C Primer part 3 | [Slides-04.pdf]({{ www.mseryn.com }}/assets/docs/Slides-04.pdf) | |
+| 01 | 06 September 2023 | Syllabus, Course Overview | [Slides-01.pdf]({{ www.mseryn.com }}/assets/docs/Slides-01.pdf) | 
+| 02 | 08 September 2023 | C Primer part 1 | [Slides-02.pdf]({{ www.mseryn.com }}/assets/docs/Slides-02.pdf) | 
+| 03 | 13 September 2023 | C Primer part 2 | [Slides-03.pdf]({{ www.mseryn.com }}/assets/docs/Slides-03.pdf) |
+| 04 | 15 September 2023 | C Primer part 3 | [Slides-04.pdf]({{ www.mseryn.com }}/assets/docs/Slides-04.pdf) |
+|  |  | Quiz 1 - C Primer | Solutions: [Quiz_01_C_Primer.pdf]({{ www.mseryn.com }}/assets/docs/Quiz_01_C_Primer.pdf) |
+
+---
+### Resources
+
+#### Git
+I always recommend [Pro Git](https://git-scm.com/book/en/v2) for intro-to-git. 
+You should read every single word in Chapters 2 and 3.
