removing example external link

--- a/_posts/2023-09-08-knr.md
+++ b/_posts/2023-09-08-knr.md
@@ -29,6 +29,23 @@ thumbnail: assets/img/kandr.jpg
     </div>
 </div>
 
+### Disclaimer
+**Please remember this book was published in 1988!**
+
+It's absolutely fabulous as an intro. Some of the advanced topics are out of date, however, and some of the practices are outdated.
+
+An example is *putting all variable declarations at the top of a file* - this is now an anti-pattern as it ineffectively uses memory.
+It had a place in the past, but no longer.
+Another example is *declaring variables in if/else-if statements* - this is also not recommended, as it causes unexpected side-effects and can be hard to read.
+A better method is to define variables as-needed around if/else-if statements and use the variables.
+Exceptions, of course, are made for loop-contained variables, especially indices and similar in for/while loops. 
+In general though, *don't have your code have side-effects*!
+
+The K&R was written by the people who designed and wrote C. These people are legends! And their insight into their language is amazing.
+So do read the book! But remember - it's not the end-all.
+
+That said, here's a short reading guide:
+
 ### Chapters 1, 2, 3, and 4
 are your basics of C. Syntax, types, loops, functions, and basic compilation - you'll do a hello-world here, for example.
 
