finishing review of k&r

--- a/_posts/2023-09-08-knr.md
+++ b/_posts/2023-09-08-knr.md
@@ -51,6 +51,34 @@ are your basics of C. Syntax, types, loops, functions, and basic compilation - y
 
 #### Pitfall topics:
 
-##### Sec 1.10: Variables and scope.
-This topic is easy to mess up in C, and the resulting errors can be a _hassle_ to identify.
+- Variables and scope are easy mess up in C, and the resulting errors can be a _hassle_ to identify.
 
+- Keep in mind your use of static -- and how it differs if it's *inside* a block vs applied to a declaration or global!
+
+- Dig around in the compilation process -- take a look at the results of preprocessing (gcc -E), at the object dump from your assembling (gcc -c, then objdump -d file.o), and at the object dump from your linked executable.
+
+### Chapter 5
+is pointers! Grab your towel and Don't Panic. This is a well-paced walkthrough, give it a slow and purposeful read.
+
+#### Pitfall topics:
+- are just what you'd expect -- pointers are easy to mess up and hard to debug.
+
+- Remember -- &variable gives you the address, \*variable gives you the value at a pointer, and \* in a declaration indicates a pointer.
+
+- C is pass-by-value! So everything is pointers - or pointers-to-pointers, even.
+
+- Array notation and pointer notation are mostly interchangeable -- and as long as the compiler is made aware of the type the pointer references, adding to a pointer will move sizeof() !
+
+### Chapter 6
+is structures - in the age of object-oriented-everything, structs should be pretty conceptually comfy.
+
+#### Pitfall topics:
+- Self-referential structs require careful malloc/free -- the compiler can't be expected to know how large an object is when it contains itself, after all!
+
+### Chapter 7 and 8
+cover I/O and UNIX system interfacing. These chapters are very *useful* but often outdated -- not usually incorrect, but there are many modern developments that ease the more tricky topics in these chapters. That said, *do* read them, as they cover the extreme-basics. The examples in chapter 8 are especially informative. Set aside time to walk through these - maybe even try running them yourself, they're that decent.
+
+### Remaining contents
+are appendices including libraries and references manuals. I find these chapters are a good skim - but I have trouble remembering these hyper-detailed tidbits out of context/use. I did enjoy skimming, though - some of the referenced materials are weird! Especially some of the more esotheric operators.
+
+Additionally, the Standard Library appendix does have some useful tables for printf/scanf formatting options. These are always nice to have handy to flip open.
