adding slindes for lec 07

--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -43,6 +43,7 @@ Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in 
 |  |  | Quiz 1 - C Primer | Solutions: [Quiz_01_C_Primer.pdf]({{ www.mseryn.com }}/assets/docs/Quiz_01_C_Primer.pdf) |
 | 05 | 20 September 2023 | Processes and ECF | [Slides-05.pdf]({{ www.mseryn.com }}/assets/docs/Slides-05.pdf) |
 | 06 | 22 September 2023 | Processes II | [Slides-06.pdf]({{ www.mseryn.com }}/assets/docs/Slides-06.pdf) |
+| 07 | 27 September 2023 | Processes III | [Slides-07.pdf]({{ www.mseryn.com }}/assets/docs/Slides-07.pdf) |
 
 ---
 ### Resources
