--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -46,6 +46,14 @@ Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in 
 | 07 | 27 September 2023 | Processes III | [Slides-07.pdf]({{ www.mseryn.com }}/assets/docs/Slides-07.pdf) |
 
 ---
+### Assignments
+
+| Topic | Assigned | Due | Files |
+|-------|-------|--------|---------|---------|
+| Contributions - Assignment 1 | 10 September 2023 | 15 September 2023| | 
+| Lab 01: Preliminaries | 27 September 2023 | 08 October 2023, 23:59 AOE | [Lab-01.pdf]({{ www.mseryn.com }}/assets/docs/Lab-01.pdf) | 
+
+---
 ### Resources
 
 #### Git
