--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -47,6 +47,8 @@ Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in 
 | 08 | 11 October 2023 | I/O part 1 | [Slides-08.pdf]({{ www.mseryn.com }}/assets/docs/Slides-08.pdf) |
 | 09 | 13 October 2023 | I/O part 2 | [Slides-09.pdf]({{ www.mseryn.com }}/assets/docs/Slides-09.pdf) |
 | 10 | 18 October 2023 | Cache | [Slides-10.pdf]({{ www.mseryn.com }}/assets/docs/Slides-10.pdf) |
+| 11 | 20 October 2023 | IPC | [Slides-11.pdf]({{ www.mseryn.com }}/assets/docs/Slides-11.pdf) |
+| 12 | 25 October 2023 | Virtual Mem | [Slides-12.pdf]({{ www.mseryn.com }}/assets/docs/Slides-12.pdf) |
 
 ---
 ### Assignments
