--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -58,6 +58,7 @@ Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in 
 | Contributions - Assignment 1 | 10 September 2023 | 15 September 2023| | 
 | Lab 01: Preliminaries | 27 September 2023 | 08 October 2023, 23:59 AOE | [Lab-01.pdf]({{ www.mseryn.com }}/assets/docs/Lab-01.pdf) | 
 | Lab 02: Bomb! | 20 October 2023 | 29 October 2023, 23:59 AOE | [Lab-02.pdf]({{ www.mseryn.com }}/assets/docs/Lab-02.pdf) | 
+| Lab 03: Attack! | 26 October 2023 | 5 November 2023, 23:59 AOE | [Lab-03.pdf]({{ www.mseryn.com }}/assets/docs/Lab-03.pdf) | 
 
 ---
 ### Resources
