adding lec 13 materials

--- a/_teaching/cs351.md
+++ b/_teaching/cs351.md
@@ -49,6 +49,8 @@ Office Hours: Saturday, 6:00 am - 7:00 am CST (Saturday 19:00 pm to 20:00 pm in 
 | 10 | 18 October 2023 | Cache | [Slides-10.pdf]({{ www.mseryn.com }}/assets/docs/Slides-10.pdf) |
 | 11 | 20 October 2023 | IPC | [Slides-11.pdf]({{ www.mseryn.com }}/assets/docs/Slides-11.pdf) |
 | 12 | 25 October 2023 | Virtual Mem | [Slides-12.pdf]({{ www.mseryn.com }}/assets/docs/Slides-12.pdf) |
+| 13 | 27 October 2023 | Dynamic Mem | [Slides-13-1.pdf]({{ www.mseryn.com }}/assets/docs/Slides-13-1.pdf) |
+|  |  | Implementing malloc | [Slides-13-2.pdf]({{ www.mseryn.com }}/assets/docs/Slides-13-2.pdf) |
 
 ---
 ### Assignments
